# ads8867

./: README.md  new.txt
ads131a04_softarm/: CMakeLists.txt
ads131a04_softarm/adc/include/: adc_ky.h
ads131a04_softarm/adc/src/: adc_ky.cpp
ads131a04_softarm/aes/: CMakeLists.txt
ads131a04_softarm/aes/include/: decrypt.h  encryption.h
ads131a04_softarm/aes/src/: encryption.cpp
ads131a04_softarm/apps/: CMakeLists.txt
ads131a04_softarm/apps/include/: app.h
ads131a04_softarm/apps/src/: app.cpp  main.cpp
ads131a04_softarm/cc2650_monitor/: Makefile  cc2650_heartbeat.h  collect_temphum_sensor.c  collect_temphum_sensor.h  handle_mainuart.c  handle_mainuart.h  node_version_up.h  statistics.c  statistics.h  system_monitor.c
ads131a04_softarm/cfg/: CMakeLists.txt
ads131a04_softarm/database/dataDb/: data.db
ads131a04_softarm/database/include/: kydatabase.h
ads131a04_softarm/database/src/: database.cpp
ads131a04_softarm/iirfilter/: iirfilter.c
ads131a04_softarm/include/: cfg_inc.h  config.h  def.h  lkt_inc.h  mqttcmd.h  ssocket_inc.h
ads131a04_softarm/iniparser/include/: iniext.h
ads131a04_softarm/modbus/: CMakeLists.txt
ads131a04_softarm/modbus/include/: modbus-private.h  modbus-rtu.h  modbus-tcp-private.h  modbus-tcp.h  modbus.h
ads131a04_softarm/modbus/src/: modbus-tcp.c
ads131a04_softarm/mqtt/: CMakeLists.txt
ads131a04_softarm/output/: app_ex  database_test  modbus_test  spi_test  test_main
ads131a04_softarm/pkginstall/: script.sh
ads131a04_softarm/sgmii/: CMakeLists.txt
ads131a04_softarm/test/: CMakeLists.txt
ads131a04_softarm/test/src/: database_test.cpp  example_spi.c  modbus_test.cpp  pub_client_test.cpp
ads131a04_softarm/utils/: CMakeLists.txt
boa-0.94.13/src/: Makefile  boa  boa_indexer
soft_arm_ads8867/: CMakeLists.txt
soft_arm_ads8867/adc/: CMakeLists.txt
soft_arm_ads8867/adc/include/: adc_ky.h
soft_arm_ads8867/adc/src/: adc_ky.cpp
soft_arm_ads8867/aes/include/: keyExtend.h
soft_arm_ads8867/aes/src/: decrypt.cpp  keyExtend.cpp  main.cpp
soft_arm_ads8867/apps/: CMakeLists.txt
soft_arm_ads8867/apps/include/: app.h
soft_arm_ads8867/apps/src/: app.cpp
soft_arm_ads8867/cc2650_monitor/: cc2650_heartbeat.c  monitor_upgrade.c  monitor_upgrade.h  node_version_up.c  system_monitor.h
soft_arm_ads8867/cfg/: CMakeLists.txt
soft_arm_ads8867/cfg/include/: alarm.h  otaload.h
soft_arm_ads8867/cfg/src/: alarm.cpp  otaload.cpp
soft_arm_ads8867/cgi-bin/: CMakeLists.txt
soft_arm_ads8867/cgi-bin/include/: cgi_main.h
soft_arm_ads8867/cgi-bin/src/: cgi_main.cpp
soft_arm_ads8867/database/: CMakeLists.txt
soft_arm_ads8867/iirfilter/: CMakeLists.txt
soft_arm_ads8867/iirfilter/include/: iirfilter.h
soft_arm_ads8867/include/: comm.h  config.h  mqttcmd.h  sysc_inc.h  sysm_inc.h  users_inc.h  utils_inc.h
soft_arm_ads8867/iniparser/: CMakeLists.txt
soft_arm_ads8867/jni/: CMakeLists.txt
soft_arm_ads8867/jni/include/: msdk.h
soft_arm_ads8867/jni/jscb/: Msdk.java
soft_arm_ads8867/jni/src/: msdk.cpp
soft_arm_ads8867/json/: CMakeLists.txt
soft_arm_ads8867/json/include/: cJSON.h
soft_arm_ads8867/lib/: libpaho-mqtt3a.so.1.0  libsqlite3.so.0.8.6
soft_arm_ads8867/lib/samples/: paho_cs_pub  paho_cs_sub
soft_arm_ads8867/lib/test/: test5  test_mqtt4async
soft_arm_ads8867/modbus/: test_Makefile
soft_arm_ads8867/modbus/include/: modbus-rtu-private.h  modbus-version.h  modbus_config.h
soft_arm_ads8867/modbus/src/: modbus-data.c  modbus-rtu.c  modbus.c
soft_arm_ads8867/mqtt/: CMakeLists.txt
soft_arm_ads8867/mqtt/include/: mqtt.h
soft_arm_ads8867/mqtt/src/: mqtt_pub.cpp
soft_arm_ads8867/output/: adc_test  aestest  app_ex  cgi_test  database_test  modbus_test  pub_client_test  sgmiii_ex  sm2test  spi_test  test_main
soft_arm_ads8867/pkginstall/: script.sh
soft_arm_ads8867/pkginstall/pkg/: install.sh
soft_arm_ads8867/pkginstall/pkg/lib/: MQTTVersion  libpaho-mqtt3as.so.1.0  libpaho-mqtt3c.so.1.0  libpaho-mqtt3cs.so.1.0
soft_arm_ads8867/pkginstall/pkg/lib/samples/: MQTTAsync_publish  paho_c_sub
soft_arm_ads8867/pkginstall/pkg/lib/test/: test9
soft_arm_ads8867/pkginstall/pkg/scripts/: monitor.sh  startup.sh
soft_arm_ads8867/pkginstall/pkg/sgw/: aestest  config.ini  data_call  sm2test  test_main
soft_arm_ads8867/ql_oe/include/: DSI_ConnectManager.h  ql_mcm_gps.h  ql_wifi.h
soft_arm_ads8867/ql_oe/lib/: libql_common_api.so.0.0.0
soft_arm_ads8867/sgmii/: CMakeLists.txt
soft_arm_ads8867/sgmii/src/: sgmii.cpp
soft_arm_ads8867/sm2/: CMakeLists.txt
soft_arm_ads8867/sm2/libtommath/: CMakeLists.txt
soft_arm_ads8867/sm2/libtommath/logs/: index.html
soft_arm_ads8867/sm2/sm2_dec/include/: test_unistd.h
soft_arm_ads8867/sm2/sm2_imp/: CMakeLists.txt
soft_arm_ads8867/sm2/sm2_imp/src/: sm2_Intrfs_test.cpp  sm2_cpu.cpp
soft_arm_ads8867/spi/: CMakeLists.txt
soft_arm_ads8867/sysm/: CMakeLists.txt
soft_arm_ads8867/sysm/include/: sysm_LedAndHeart.h
soft_arm_ads8867/sysm/src/: sysm_LedAndHeart.cpp  sysm_authorization.cpp
soft_arm_ads8867/test/src/: example_six_line_spi.c  main_test.cpp
soft_arm_ads8867/tools/pahomqtt/lib/: libpaho-mqtt3a.so.1.0  libpaho-mqtt3cs.so.1.0
soft_arm_ads8867/tools/pahomqtt/lib/samples/: MQTTAsync_publish  MQTTClient_publish  MQTTClient_subscribe  paho_c_pub  paho_c_sub  paho_cs_pub
soft_arm_ads8867/tools/pahomqtt/lib/test/: sync_client_test  test3  test5  test9  test_mqtt4async
soft_arm_ads8867/tools/pahomqtt_x86/lib/: libpaho-mqtt3a.so.1.0  libpaho-mqtt3as.so.1.0  libpaho-mqtt3c.so.1.0  libpaho-mqtt3cs.so.1.0
soft_arm_ads8867/tools/pahomqtt_x86/lib/samples/: MQTTClient_publish  MQTTClient_publish_async  MQTTClient_subscribe  paho_cs_pub
soft_arm_ads8867/tools/pahomqtt_x86/lib/test/: sync_client_test  test2  test3  test4  test5  test_mqtt4async
soft_arm_ads8867/tools/zlib-1.2.13/lib/: libz.so.1.2.13
soft_arm_ads8867/tools/zlib-1.2.13/lib/pkgconfig/: zlib.pc
soft_arm_ads8867/utils/include/: bdqueue.h  led.h  ringbuf.h  utils.h
soft_arm_ads8867/utils/src/: hash.cpp  ipcheck.cpp  mutex.cpp  pkt_queue.cpp  shm_queue.cpp  sm2cert.cpp
(+71 files in other folders)
